attempt to fixed background scrolling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
 @media (max-width:767px) {
+    body {
+        background-attachment: fixed;
+    }
     .hidden-mobile {
         display: none;
     }
